nlb-ingress/ingress-nlb-dev.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: todo-front-nlb
  namespace: todo-dev
  annotations:
    kubernetes.io/ingress.class: "nginx-nlb"
    nginx.org/websocket-services: "todo-app"
spec:
  rules:
  - host: todo-list-frontdev.k8s.ws.local
    http:
      paths:
      - path: /ws
        backend:
          serviceName: todo-app
          servicePort: 8080
